@@ -1,5 +1,12 @@
 2004-08-30  Mark McLoughlin  <mark@skynet.ie>
 
+	Fix problem with schemas install. Bug #151334.
+
+	* gconf/gconftool.c: (process_locale_info): install the
+	global default in the C locale only.
+
+2004-08-30  Mark McLoughlin  <mark@skynet.ie>
+
 	Lots of debugging info from Mickey Stein <yekkim@pacbell.net>
 	narrowed this one down in bug #150779.
 
